--- a/templates/web/base.html
+++ b/templates/web/base.html
@@ -11,11 +11,11 @@
   <meta name="keywords" content="">
 
   <!-- Favicons -->
-  <link href="{% static "web/img/lum-logo.jpeg" %}" rel="icon">
-  <link href="{% static "web/img/apple-touch-icon.png" %}" rel="apple-touch-icon">
+  <link href="{% static 'web/img/lum-logo.jpeg' %}" rel="icon">
+  <link href="{% static 'web/img/apple-touch-icon.png' %}" rel="apple-touch-icon">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-  <a href="https://wa.me/9645286856" target="_blank">
-    <img src="{% static "web/img/wtico.png" %}" alt="WhatsApp" class="wtspp" style="width: 50px; height: 50px;">
+  <a href="https://wa.me/96336 76467" target="_blank">
+    <img src="{% static 'web/img/wtico.png' %}" alt="WhatsApp" class="wtspp" style="width: 50px; height: 50px;">
 </a>
 
 
@@ -65,6 +65,7 @@
  <!-- Main JS File -->
  <script src="{% static "web/js/main.js" %}"></script>
 
+ {% block javascript %} {% endblock javascript %}
 </body>
 
 </html>
