--- a/templates/web/courses.html
+++ b/templates/web/courses.html
@@ -22,7 +22,7 @@
       <nav class="breadcrumbs">
         <div class="container">
           <ol>
-            <li><a href="{% url "index" %}">Home</a></li>
+            <li><a href="{% url 'index' %}">Home</a></li>
             <li class="current">Courses</li>
           </ol>
         </div>
