--- a/templates/web/index.html
+++ b/templates/web/index.html
@@ -14,7 +14,7 @@
         <h2 data-aos="fade-up" data-aos-delay="100" class="clr2">LUUMEO<br>Institute of Accounts</h2>
         <p data-aos="fade-up" data-aos-delay="200">Start Your Accounting Journey Today!</p>
         <div class="d-flex mt-4" data-aos="fade-up" data-aos-delay="300">
-          <a href="{% url "contact" %}" class="btn-get-started">Get Started</a>
+          <a href="{% url 'contact' %}" class="btn-get-started">Get Started</a>
         </div>
       </div>
 
