--- a/templates/web/partials/footer.html
+++ b/templates/web/partials/footer.html
@@ -25,7 +25,7 @@
         <div class="col-lg-2 col-md-3 footer-links">
           <h4>Useful Links</h4>
           <ul>
-            <li><a href="{% url "index" %}">Home</a></li>
+            <li><a href="{% url 'index' %}">Home</a></li>
             <li><a href="{% url "about" %}">About us</a></li>
             <li><a href="{% url "courses" %}">Courses</a></li>
           </ul>
