--- a/templates/web/partials/header.html
+++ b/templates/web/partials/header.html
@@ -1,26 +1,22 @@
 {% load static %}
-
-
 <header id="header" class="header d-flex align-items-center sticky-top">
     <div class="container-fluid container-xl position-relative d-flex align-items-center">
 
-      <a href="index.html" class="logo d-flex align-items-center me-auto">
-        <!-- Uncomment the line below if you also wish to use an image logo -->
-        <!-- <img src="assets/img/logo.png" alt=""> -->
+      <a href="{% url 'index' %}" class="logo d-flex align-items-center me-auto">
         <h1 class="sitename">LUUMEO</h1>
       </a>
 
       <nav id="navmenu" class="navmenu">
         <ul>
-          <li><a href="{% url "index" %}" class="active">Home<br></a></li>
-          <li><a href="{% url "about" %}">About</a></li>
-          <li><a href="{% url "courses" %}">Courses</a></li>
-       <li><a href="{% url "contact" %}">Contact</a></li>
+          <li><a href="{% url 'index' %}" class="{% if is_home %}active {% endif %}">Home<br></a></li>
+          <li><a href="{% url 'about' %}" class="{% if is_about %}active {% endif %}">About</a></li>
+          <li><a href="{% url 'courses' %}" class="{% if is_course %}active {% endif %}">Courses</a></li>
+       <li><a href="{% url 'contact' %}" class="{% if is_contact %}active {% endif %}">Contact</a></li>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
 
-      <a class="btn-getstarted" href="{% url "contact" %}">Get Started</a>
+      <a class="btn-getstarted" href="{% url 'contact' %}">Get Started</a>
 
     </div>
   </header>
