--- a/templates/web/base.html
+++ b/templates/web/base.html
@@ -14,7 +14,7 @@
   <link href="{% static 'web/img/lum-logo.jpeg' %}" rel="icon">
   <link href="{% static 'web/img/apple-touch-icon.png' %}" rel="apple-touch-icon">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-  <a href="https://wa.me/96336 76467" target="_blank">
+  <a href="https://wa.me/message/EQOKDVU7GJ5SE1" target="_blank">
     <img src="{% static 'web/img/wtico.png' %}" alt="WhatsApp" class="wtspp" style="width: 50px; height: 50px;">
 </a>
 
